k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dart-automation-service
  namespace: default
  labels:
    app: dart-automation
    enterprise.apm_id: AD00001234
spec:
  type: ClusterIP # Internal routing only (Ingress handles external traffic)
  selector:
    app: dart-automation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # The port our FastAPI uvicorn server runs on
